packages/manager-components/src/design/Layout/styles.css
@font-face {
  font-family: 'Source Serif Pro';
  font-style: normal;
  font-weight: 400;
  src: local('Source Serif Pro'), local('SourceSerifPro-Regular'),
    url('./static/fonts/source-serif-pro-v5-latin-regular.woff2')
      format('woff2'),
    url('./static/fonts/source-serif-pro-v5-latin-regular.woff') format('woff');
}

@font-face {
  font-family: 'Source Serif Pro';
  font-style: normal;
  font-weight: 600;
  src: local('Source Serif Pro Semibold'), local('SourceSerifPro-Semibold'),
    url('./static/fonts/source-serif-pro-v5-latin-600.woff2') format('woff2'),
    url('./static/fonts/source-serif-pro-v5-latin-600.woff') format('woff');
}

@font-face {
  font-family: 'Source Serif Pro';
  font-style: normal;
  font-weight: 700;
  src: local('Source Serif Pro Bold'), local('SourceSerifPro-Bold'),
    url('./static/fonts/source-serif-pro-v5-latin-700.woff2') format('woff2'),
    url('./static/fonts/source-serif-pro-v5-latin-700.woff') format('woff');
}

:global(body) {
  font-family: 'Source Serif Pro', serif;
  background: #fffdf3;
  font-size: 14px;
  line-height: 1.4;
  margin: 0;
}

:global(*),
:global(:before),
:global(:after) {
  box-sizing: border-box;
}

:global(h2) {
  font-size: var(--font-size-l);
  position: relative;
}

:global(h2):after {
  content: ' ';
  position: absolute;
  bottom: -5px;
  left: 0;
  width: 100%;
  border-top: 1px solid rgba(34, 36, 38, 0.15);
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

:global(h3),
:global(h1) {
  font-size: var(--font-size-xl);
  position: relative;
}

:global(h3):after,
:global(h1):after {
  content: ' ';
  position: absolute;
  bottom: -5px;
  left: 0;
  width: 100%;
  border-top: 1px solid rgba(34, 36, 38, 0.15);
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

:global(h4) {
  font-size: var(--font-size-l);
  margin-bottom: var(--space-xs);
}

:global(a) {
  text-decoration-style: dotted;
  color: var(--color-black);
}

:global(hr) {
  border: 0;
  height: 0;
  border-top: 1px solid var(--color-border);
  margin: var(--space-s) 0;
}

.layout__header {
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 1;
}

.layout__footer {
  position: fixed;
  width: 100%;
  bottom: 0;
  z-index: 1;
}

.layout__content-wrap {
  margin: 50px 0;

  @media (--viewport-s) {
    margin: 50px 0;
  }
}

.layout__title {
  background-color: var(--color-secondary);
  padding: 12px 16px 12px;

  @media (--viewport-s) {
    padding: 12px 7% 12px;
  }
}

.layout--no-header .layout__content-wrap {
  margin: 24px 0;

  @media (--viewport-s) {
    margin: 32px 0;
  }
}

.layout__content {
  margin: 16px 16px;

  @media (--viewport-s) {
    margin: 16px 7%;
  }
}

